fix: enhance elements visibility

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   background-color: #141414;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .box {
   background: rgb(63,94,251);
   background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
